# engram

./: Cargo.toml  LICENSE  README.md  deny.toml
.cargo/: config.toml
crates/engram-action/: Cargo.toml
crates/engram-action/src/: confirmation.rs  error.rs  lib.rs  orchestrator.rs  scheduler.rs  types.rs
crates/engram-action/src/handler/: clipboard.rs  mod.rs  notification.rs  quick_note.rs  reminder.rs  shell_command.rs  url_open.rs
crates/engram-action/src/intent/: mod.rs  patterns.rs  time_parser.rs
crates/engram-action/src/task/: mod.rs  state_machine.rs
crates/engram-api/: Cargo.toml
crates/engram-api/src/: auth.rs  error.rs  handlers.rs  lib.rs  rate_limit.rs  routes.rs  state.rs
crates/engram-api/tests/: integration_tests.rs
crates/engram-app/: Cargo.toml
crates/engram-app/src/: cli.rs  main.rs
crates/engram-audio/: Cargo.toml
crates/engram-audio/src/: lib.rs  silero_vad.rs  windows_audio.rs
crates/engram-capture/: Cargo.toml
crates/engram-capture/src/: lib.rs  windows_capture.rs
crates/engram-chat/: Cargo.toml
crates/engram-chat/src/: context.rs  error.rs  lib.rs  orchestrator.rs  parser.rs  response.rs  types.rs  voice.rs
crates/engram-core/: Cargo.toml
crates/engram-core/benches/: pii_benchmarks.rs
crates/engram-core/src/: config.rs  error.rs  events.rs  lib.rs  safety.rs  types.rs
crates/engram-dictation/: Cargo.toml
crates/engram-dictation/src/: engine.rs  hotkey.rs  lib.rs  state.rs  text_inject.rs
crates/engram-insight/: Cargo.toml
crates/engram-insight/src/: cluster.rs  digest.rs  entity.rs  error.rs  export.rs  lib.rs  summarizer.rs  types.rs
crates/engram-ocr/: Cargo.toml
crates/engram-ocr/src/: lib.rs  windows_ocr.rs
crates/engram-storage/: Cargo.toml
crates/engram-storage/src/: db.rs  lib.rs  migrations.rs  queries.rs  repository.rs  search.rs  tier.rs
crates/engram-ui/: Cargo.toml
crates/engram-ui/assets/: dashboard.html  tray-panel.html
crates/engram-ui/src/: dashboard.rs  lib.rs  tray.rs  tray_panel.rs  webview.rs
crates/engram-vector/: Cargo.toml
crates/engram-vector/benches/: search_benchmarks.rs
crates/engram-vector/src/: embedding.rs  index.rs  lib.rs  pipeline.rs  search.rs
crates/engram-whisper/: Cargo.toml
crates/engram-whisper/src/: lib.rs  whisper_service.rs
wix/: License.rtf  config.toml  main.wxs
