[package]
name = "engram-action"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
engram-core = { path = "../engram-core" }
engram-storage = { path = "../engram-storage" }
engram-insight = { path = "../engram-insight" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
regex = "1"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
