[package]
name = "engram-api"
version = "0.1.0"
edition = "2021"

[dependencies]
engram-core = { path = "../engram-core" }
engram-vector = { path = "../engram-vector" }
engram-storage = { path = "../engram-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
rusqlite = { version = "0.31", features = ["bundled"] }
