[package]
name = "engram-api"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
engram-core = { path = "../engram-core" }
engram-vector = { path = "../engram-vector" }
engram-storage = { path = "../engram-storage" }
engram-ui = { path = "../engram-ui" }
engram-dictation = { path = "../engram-dictation" }
engram-insight = { path = "../engram-insight" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
tower = { version = "0.5", features = ["limit", "util"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.9"
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
rusqlite = { version = "0.31", features = ["bundled"] }
