[package]
name = "engram-audio"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Enable real Silero VAD via ONNX Runtime (requires libonnxruntime shared lib).
vad = ["dep:ort", "dep:ndarray"]

[dependencies]
engram-core = { path = "../engram-core" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "load-dynamic"], optional = true }
ndarray = { version = "0.17", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
cpal = "0.15"
