[package]
name = "engram-core"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "pii_benchmarks"
harness = false
