[package]
name = "engram-dictation"
version = "0.1.0"
edition = "2021"

[dependencies]
engram-core = { path = "../engram-core" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
global-hotkey = "0.6"
windows-sys = { version = "0.52", features = [
    "Win32_UI_Input_KeyboardAndMouse",
] }
