[package]
name = "engram-insight"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
engram-core = { path = "../engram-core" }
engram-storage = { path = "../engram-storage" }
engram-vector = { path = "../engram-vector" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
regex = "1"
